--- a/server/public/Styles.css
+++ b/server/public/Styles.css
@@ -1,7 +1,7 @@
-/* body {
+body {
   background-image: url(image/commonRoom.jpg);
   background-size: cover;
   background-repeat: no repeat;
   background-position: center center;
 
-} */
+}
