--- a/server/public/Styles.css
+++ b/server/public/Styles.css
@@ -3,6 +3,7 @@ body {
   background-size: cover;
 
 
+
 }
 
 h1 {
@@ -10,4 +11,15 @@ h1 {
   text-align: center;
   font-family:'Uncial Antiqua', cursive;
  font-size: 5pc;
+}
+
+h3 {
+  color: bisque;
+  font-family:'Uncial Antiqua', cursive;
+  
+}
+
+.photo {
+  text-align: center;
+  display: flexbox;
 }
