--- a/server/public/Styles.css
+++ b/server/public/Styles.css
@@ -9,13 +9,13 @@ body {
 h1 {
   color: aliceblue;
   text-align: center;
-  font-family:'Uncial Antiqua', cursive;
+  font-family: 'Sriracha', cursive;
  font-size: 5pc;
 }
 
 h3 {
   color: bisque;
-  font-family:'Uncial Antiqua', cursive;
+  font-family: 'Sriracha', cursive;
   
 }
 
@@ -31,7 +31,7 @@ h3 {
 
 .wizard:nth-child(2) {
   justify-content: flex-end;
-  text-align: left;
+  /* text-align: left; */
 }
 
 .text {
